charts/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigw
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: apigw
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: apigw
    spec:
      containers:
      - name: apigw
        image: myharbor.apps.211-34-231-93.nip.io/mvp/mvp_apigw:20240423235400
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1
            memory: 1G
          requests:
            cpu: 100m
            memory: 50Mi
