charts/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigw
  labels: # service monitor 의 selector 를 위하여 생성
    app: apigw
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: apigw
  type: ClusterIP
