charts/gateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app : apigw
  name: apigw-route
spec:
  host: mvp-ingressgateway.apps.211-34-231-93.nip.io
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: apigw
    weight: 100
  wildcardPolicy: None
